--- a/flask_hello_ver2/templates/task_selection.html
+++ b/flask_hello_ver2/templates/task_selection.html
@@ -208,6 +208,21 @@
                 </div>
             </div>
             
+            <div class="col-md-6 col-lg-3">
+                <div class="task-card animate-up delay-4">
+                    <div class="text-center">
+                        <div class="task-icon-wrapper">
+                            <i class="bi bi-grid-3x3"></i>
+                        </div>
+                        <h4 class="task-title">N-back Task</h4>
+                        <p class="task-description">
+                            直前の刺激と同じ位置が表示されたら反応してください。ワーキングメモリと注意機能を測定します。
+                        </p>
+                    </div>
+                    <a href="{{ url_for('nback_index') }}" class="btn btn-task">開始する <i class="bi bi-arrow-right-short"></i></a>
+                </div>
+            </div>
+            
         </div>
     </div>
     
